--- a/src/configs/CIFAR10/ReACGAN-ADC.yaml
+++ b/src/configs/CIFAR10/ReACGAN-ADC.yaml
@@ -5,8 +5,8 @@ DATA:
 MODEL:
   backbone: "big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "2C"
-  aux_cls_type: "TAC"
+  d_cond_mtd: "D2DCE"
+  aux_cls_type: "ADC"
   normalize_d_embed: True
   d_embed_dim: 512
   apply_g_sn: True
@@ -23,7 +23,10 @@ MODEL:
   g_ema_start: 1000
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 1.0
-  tac_gen_lambda: 1.0
-  tac_dis_lambda: 1.0
-  temperature: 1.0
+  cond_lambda: 0.5
+  m_p: 0.98
+  temperature: 0.5
+OPTIMIZATION:
+  batch_size: 128
+  g_lr: 0.00028284271
+  d_lr: 0.00028284271
