--- a/src/configs/CIFAR10/StyleGAN2-ADA.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-ADA.yaml
@@ -42,6 +42,14 @@ OPTIMIZATION:
   g_updates_per_step: 1
   d_updates_per_step: 1
   total_steps: 1562500
+AUG:
+  apply_ada: True
+  ada_aug_type: "bgc"
+  ada_initial_augment_p: 0
+  ada_target: 0.6
+  ada_kimg: 500
+  ada_interval: 4
+
 STYLEGAN2:
   g_reg_interval: 4
   d_reg_interval: 16
