--- a/src/configs/CIFAR10/StyleGAN2.yaml
+++ b/src/configs/CIFAR10/StyleGAN2.yaml
@@ -41,7 +41,7 @@ OPTIMIZATION:
   beta2: 0.99
   g_updates_per_step: 1
   d_updates_per_step: 1
-  total_steps: 1562500
+  total_steps: 200000
 STYLEGAN2:
   g_reg_interval: 4
   d_reg_interval: 16
