--- a/src/configs/AFHQ/Wild-StyleGAN2-ADA.yaml
+++ b/src/configs/AFHQ/Wild-StyleGAN2-ADA.yaml
@@ -15,12 +15,12 @@
 
 DATA:
   name: "afhq-wild"
-  img_size: 32
-  num_classes: 10
+  img_size: 512
+  num_classes: 1
 MODEL:
   backbone: "stylegan2"
-  g_cond_mtd: "cAdaIN"
-  d_cond_mtd: "SPD"
+  g_cond_mtd: "W/O"
+  d_cond_mtd: "W/O"
   g_act_fn: "Auto"
   d_act_fn: "Auto"
   z_prior: "gaussian"
@@ -32,9 +32,11 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 0.01
+  r1_lambda: 0.5
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
+  batch_size: 8
+  acml_steps: 8
   g_lr: 0.0025
   d_lr: 0.0025
   beta1: 0
@@ -52,11 +54,11 @@ AUG:
 STYLEGAN2:
   g_reg_interval: 4
   d_reg_interval: 16
-  mapping_network: 2
-  style_mixing_p: 0
-  g_ema_kimg: 500
-  g_ema_rampup: 0.05
-  apply_pl_reg: False
-  pl_weight: 0
-  d_architecture: "orig"
-  d_epilogue_mbstd_group_size: 32
+  mapping_network: 8
+  style_mixing_p: 0.9
+  g_ema_kimg: 20
+  g_ema_rampup: "N/A"
+  apply_pl_reg: True
+  pl_weight: 2
+  d_architecture: "resnet"
+  d_epilogue_mbstd_group_size: 8
