--- a/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
@@ -43,8 +43,8 @@ OPTIMIZATION:
   d_updates_per_step: 1
   total_steps: 300000
 AUG:
-  apply_ada: True
-  ada_aug_type: "diffaug"
+  apply_diffaug: True
+  diffaug_type: "diffaug"
 STYLEGAN2:
   g_reg_interval: 4
   d_reg_interval: 16
