--- a/src/configs/CIFAR10/StyleGAN2-D2DCE-DiffAug.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-D2DCE-DiffAug.yaml
@@ -43,7 +43,7 @@ OPTIMIZATION:
   beta2: 0.99
   g_updates_per_step: 1
   d_updates_per_step: 2
-  total_steps: 300000
+  total_steps: 1000000
 AUG:
   apply_diffaug: True
   diffaug_type: "diffaug"
