--- a/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
@@ -41,7 +41,7 @@ OPTIMIZATION:
   beta2: 0.99
   g_updates_per_step: 1
   d_updates_per_step: 1
-  total_steps: 300000
+  total_steps: 1000000
 AUG:
   apply_diffaug: True
   diffaug_type: "diffaug"
