--- a/src/configs/CIFAR10/ReACGAN-ADA.yaml
+++ b/src/configs/CIFAR10/ReACGAN-ADA.yaml
@@ -30,6 +30,8 @@ OPTIMIZATION:
   g_lr: 0.00028284271
   d_lr: 0.00028284271
   total_steps: 400000
+PRE:
+  apply_rflip: False
 AUG:
   apply_ada: True
   ada_aug_type: "bgc"
