--- a/src/configs/CIFAR10/StyleGAN2-ADA.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-ADA.yaml
@@ -42,6 +42,8 @@ OPTIMIZATION:
   g_updates_per_step: 1
   d_updates_per_step: 1
   total_steps: 1000000
+PRE:
+  apply_rflip: False
 AUG:
   apply_ada: True
   ada_aug_type: "bgc"
