--- a/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-DiffAug.yaml
@@ -1,8 +1,8 @@
-# Guidelines for StyleGAN2-ADA config
+# Guidelines for StyleGAN2-DiffAug config
 # Don't change cfgs except for the explained below as comment.
 # Changing other cfgs will cause it to deviate from original StyleGAN paper settings.
 # g_cond_mtd can be changed btw ["N/A", "cAdaIN"]
-# d_cond_mtd can be changed btw ["N/A", "SPD"]
+# d_cond_mtd can be changed btw ["W/O", "AC", "PD", "MH", "MD", "2C", "D2DCE", "SPD"]
 # z_dim, w_dim should be fixed to 512 regardless of image size.
 # apply_g_ema should be true for stable results.
 # apply_r1_reg should be true.
