--- a/src/configs/CIFAR10/StyleGAN2-D2DCE.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-D2DCE.yaml
@@ -42,6 +42,7 @@ OPTIMIZATION:
   d_lr: 0.0025
   beta1: 0
   beta2: 0.99
+  d_first: False
   g_updates_per_step: 1
   d_updates_per_step: 2
   total_steps: 200000
