--- a/src/configs/CIFAR10/ReACGAN-Info.yaml
+++ b/src/configs/CIFAR10/ReACGAN-Info.yaml
@@ -4,8 +4,10 @@ DATA:
   num_classes: 10
 MODEL:
   backbone: "big_resnet"
-  g_cond_mtd: "W/O"
-  d_cond_mtd: "W/O"
+  g_cond_mtd: "cBN"
+  d_cond_mtd: "D2DCE"
+  normalize_d_embed: True
+  d_embed_dim: 512
   apply_g_sn: True
   apply_d_sn: True
   apply_attn: True
@@ -19,8 +21,16 @@ MODEL:
   g_ema_decay: 0.9999
   g_ema_start: 1000
   info_type: "discrete"
+  g_info_injection: "cBN"
   info_num_discrete_c: 1
   info_dim_discrete_c: 10
 LOSS:
   adv_loss: "hinge"
+  cond_lambda: 0.5
+  m_p: 0.98
+  temperature: 0.5
   infoGAN_loss_discrete_lambda: 1
+OPTIMIZATION:
+  batch_size: 128
+  g_lr: 0.00028284271
+  d_lr: 0.00028284271
