--- a/src/configs/CIFAR10/ReACGAN-Info.yaml
+++ b/src/configs/CIFAR10/ReACGAN-Info.yaml
@@ -29,8 +29,12 @@ LOSS:
   cond_lambda: 0.5
   m_p: 0.98
   temperature: 0.5
-  infoGAN_loss_discrete_lambda: 1
+  infoGAN_loss_discrete_lambda: 1.0
 OPTIMIZATION:
   batch_size: 128
   g_lr: 0.00028284271
   d_lr: 0.00028284271
+  beta1: 0.0
+  beta2: 0.999
+  d_updates_per_step: 5
+  total_steps: 100000
