--- a/src/configs/CIFAR100/BigGAN-Deep.yaml
+++ b/src/configs/CIFAR100/BigGAN-Deep.yaml
@@ -5,9 +5,7 @@ DATA:
 MODEL:
   backbone: "deep_big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "D2DCE"
-  normalize_d_embed: True
-  d_embed_dim: 512
+  d_cond_mtd: "PD"
   apply_g_sn: True
   apply_d_sn: True
   apply_attn: True
@@ -24,13 +22,10 @@ MODEL:
   g_ema_start: 1000
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 0.5
-  m_p: 0.98
-  temperature: 0.5
 OPTIMIZATION:
-  batch_size: 128
-  g_lr: 0.00028284271
-  d_lr: 0.00028284271
+  batch_size: 64
+  g_lr: 0.0002
+  d_lr: 0.0002
   beta1: 0.0
   beta2: 0.999
   d_updates_per_step: 5
