--- a/src/configs/ImageNet/BigGAN-Mod2048-Deep.yaml
+++ b/src/configs/ImageNet/BigGAN-Mod2048-Deep.yaml
@@ -1,17 +1,15 @@
 DATA:
-  name: "CIFAR100"
-  img_size: 32
-  num_classes: 100
+  name: "ImageNet"
+  img_size: 128
+  num_classes: 1000
 MODEL:
   backbone: "deep_big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "D2DCE"
-  normalize_d_embed: True
-  d_embed_dim: 512
+  d_cond_mtd: "PD"
   apply_g_sn: True
   apply_d_sn: True
   apply_attn: True
-  attn_g_loc: [2]
+  attn_g_loc: [4]
   attn_d_loc: [1]
   z_dim: 128
   g_shared_dim: 128
@@ -21,17 +19,15 @@ MODEL:
   d_depth: 2
   apply_g_ema: True
   g_ema_decay: 0.9999
-  g_ema_start: 1000
+  g_ema_start: 20000
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 0.5
-  m_p: 0.98
-  temperature: 0.5
 OPTIMIZATION:
-  batch_size: 128
-  g_lr: 0.00028284271
-  d_lr: 0.00028284271
+  batch_size: 512
+  acml_steps: 4
+  g_lr: 0.00005
+  d_lr: 0.0002
   beta1: 0.0
   beta2: 0.999
-  d_updates_per_step: 5
-  total_steps: 100000
+  d_updates_per_step: 2
+  total_steps: 200000
