--- a/src/configs/AFHQ/StyleGAN2-D2DCE-ADA.yaml
+++ b/src/configs/AFHQ/StyleGAN2-D2DCE-ADA.yaml
@@ -36,6 +36,7 @@ LOSS:
   temperature: 0.5
   apply_r1_reg: True
   r1_lambda: 0.5
+  r1_place: "outside_loop"
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
   batch_size: 64
