--- a/src/configs/CIFAR10/StyleGAN2-ADA.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-ADA.yaml
@@ -33,6 +33,7 @@ LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
   r1_lambda: 0.01
+  r1_place: "outside_loop"
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
   g_lr: 0.0025
