--- a/src/configs/ImageNet/StyleGAN2-D2DCE.yaml
+++ b/src/configs/ImageNet/StyleGAN2-D2DCE.yaml
@@ -1,7 +1,5 @@
-# Guidelines for StyleGAN2-DiffAug config
-# Don't change cfgs except for the explained below as comment.
-# Changing other cfgs will cause it to deviate from original StyleGAN paper settings.
-# g_cond_mtd can be changed btw ["N/A", "cAdaIN"]
+# Guidelines for StyleGAN2-SPD-ADA config
+# g_cond_mtd can be changed btw ["W/O", "cAdaIN"]
 # d_cond_mtd can be changed btw ["W/O", "AC", "PD", "MH", "MD", "2C", "D2DCE", "SPD"]
 # z_dim, w_dim should be fixed to 512 regardless of image size.
 # apply_g_ema should be true for stable results.
@@ -14,13 +12,15 @@
 # g_ema_rampup, mapping_network, check StyleGAN2 section in src/config.py
 
 DATA:
-  name: "CIFAR100"
-  img_size: 32
-  num_classes: 100
+  name: "ImageNet"
+  img_size: 128
+  num_classes: 1000
 MODEL:
   backbone: "stylegan2"
   g_cond_mtd: "cAdaIN"
-  d_cond_mtd: "SPD"
+  d_cond_mtd: "D2DCE"
+  normalize_d_embed: True
+  d_embed_dim: 2048
   g_act_fn: "Auto"
   d_act_fn: "Auto"
   z_prior: "gaussian"
@@ -32,10 +32,15 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 0.01
-  r1_place: "inside_loop"
+  r1_lambda: 0.2048
+  r1_place: "outside_loop"
+  cond_lambda: 0.5
+  m_p: 0.90
+  temperature: 0.25
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
+  batch_size: 256
+  acml_steps: 1
   g_lr: 0.0025
   d_lr: 0.0025
   beta1: 0
@@ -43,18 +48,15 @@ OPTIMIZATION:
   d_first: False
   g_updates_per_step: 1
   d_updates_per_step: 1
-  total_steps: 1000000
-AUG:
-  apply_diffaug: True
-  diffaug_type: "diffaug"
+  total_steps: 200000
 STYLEGAN2:
   g_reg_interval: 4
   d_reg_interval: 16
   mapping_network: 2
-  style_mixing_p: 0
-  g_ema_kimg: 500
-  g_ema_rampup: 0.05
-  apply_pl_reg: False
-  pl_weight: 0
-  d_architecture: "orig"
-  d_epilogue_mbstd_group_size: 32
+  style_mixing_p: 0.9
+  g_ema_kimg: 20
+  g_ema_rampup: "N/A"
+  apply_pl_reg: True
+  pl_weight: 2
+  d_architecture: "resnet"
+  d_epilogue_mbstd_group_size: 8
