--- a/src/configs/CIFAR10/ReACGAN-Deep.yaml
+++ b/src/configs/CIFAR10/ReACGAN-Deep.yaml
@@ -3,7 +3,7 @@ DATA:
   img_size: 32
   num_classes: 10
 MODEL:
-  backbone: "deep_big_resnet"
+  backbone: "big_resnet_deep_biggan_pytorch"
   g_cond_mtd: "cBN"
   d_cond_mtd: "D2DCE"
   normalize_d_embed: True
