--- a/src/configs/CIFAR100/BigGAN-Deep.yaml
+++ b/src/configs/CIFAR100/BigGAN-Deep.yaml
@@ -3,7 +3,7 @@ DATA:
   img_size: 32
   num_classes: 100
 MODEL:
-  backbone: "deep_big_resnet"
+  backbone: "big_resnet_deep_biggan_pytorch"
   g_cond_mtd: "cBN"
   d_cond_mtd: "PD"
   apply_g_sn: True
