--- a/src/configs/CIFAR10/ReACGAN-Deep.yaml
+++ b/src/configs/CIFAR10/ReACGAN-Deep.yaml
@@ -3,7 +3,7 @@ DATA:
   img_size: 32
   num_classes: 10
 MODEL:
-  backbone: "big_resnet_deep_biggan_pytorch"
+  backbone: "big_resnet_deep_legacy"
   g_cond_mtd: "cBN"
   d_cond_mtd: "D2DCE"
   normalize_d_embed: True
@@ -31,7 +31,7 @@ OPTIMIZATION:
   batch_size: 128
   g_lr: 0.00028284271
   d_lr: 0.00028284271
-  beta1: 0.0
+  beta1: 0.5
   beta2: 0.999
   d_updates_per_step: 5
   total_steps: 100000
