--- a/src/configs/CIFAR10/StyleGAN2-Uncond.yaml
+++ b/src/configs/CIFAR10/StyleGAN2-Uncond.yaml
@@ -1,18 +1,3 @@
-# Guidelines for StyleGAN2 config
-# Don't change cfgs except for the explained below as comment.
-# Changing other cfgs will cause it to deviate from original StyleGAN paper settings.
-# g_cond_mtd can be changed btw ["W/O", "cAdaIN"]
-# d_cond_mtd can be changed btw ["W/O", "AC", "PD", "MH", "MD", "2C", "D2DCE", "SPD"]
-# z_dim, w_dim should be fixed to 512 regardless of image size.
-# apply_g_ema should be true for stable results.
-# apply_r1_reg should be true.
-# g_reg_interval, d_reg_interval is fixed to 4, 16 regardless of image size.
-# pl_reg is disabled only for cifar10. 
-# d_architecture is 'orig' for cifar10.
-# style_mixing_p should be 0.9 for all settings except for cifar10 (0)
-# for total_step, batch_size, d_epilogue_mbstd_group_size, g/d_lr, r1_lambda, g_ema_kimg
-# g_ema_rampup, mapping_network, check StyleGAN2 section in src/config.py
-
 DATA:
   name: "CIFAR10"
   img_size: 32
@@ -44,7 +29,7 @@ OPTIMIZATION:
   g_updates_per_step: 1
   d_updates_per_step: 1
   total_steps: 200000
-STYLEGAN2:
+STYLEGAN:
   g_reg_interval: 4
   d_reg_interval: 16
   mapping_network: 2
