--- a/src/configs/AFHQ_V2/StyleGAN2-paper.yaml
+++ b/src/configs/AFHQ_V2/StyleGAN2-paper.yaml
@@ -1,11 +1,11 @@
 DATA:
-  name: "AFHQ"
+  name: "AFHQ_V2_uncond"
   img_size: 512
-  num_classes: 3
+  num_classes: 1
 MODEL:
-  backbone: "stylegan3"
-  g_cond_mtd: "cAdaIN"
-  d_cond_mtd: "SPD"
+  backbone: "stylegan2"
+  g_cond_mtd: "W/O"
+  d_cond_mtd: "W/O"
   g_act_fn: "Auto"
   d_act_fn: "Auto"
   z_prior: "gaussian"
@@ -17,14 +17,14 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 16.4
+  r1_lambda: 5
   r1_place: "outside_loop"
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
-  batch_size: 32
+  batch_size: 64
   acml_steps: 1
-  g_lr: 0.002
-  d_lr: 0.002
+  g_lr: 0.0025
+  d_lr: 0.0025
   beta1: 0
   beta2: 0.99
   d_first: False
@@ -39,15 +39,13 @@ AUG:
   ada_kimg: 500
   ada_interval: 4
 STYLEGAN:
-  stylegan3_cfg: "stylegan3-r"
-  blur_init_sigma: 10
-  g_reg_interval: 1
+  g_reg_interval: 4
   d_reg_interval: 16
-  mapping_network: 2
-  style_mixing_p: 0
-  g_ema_kimg: 10
+  mapping_network: 8
+  style_mixing_p: 0.9
+  g_ema_kimg: 20
   g_ema_rampup: "N/A"
-  apply_pl_reg: False
-  pl_weight: 0
+  apply_pl_reg: True
+  pl_weight: 2
   d_architecture: "resnet"
-  d_epilogue_mbstd_group_size: 4
+  d_epilogue_mbstd_group_size: 8
