--- a/src/configs/AFHQ_V2/StyleGAN3-t-paper.yaml
+++ b/src/configs/AFHQ_V2/StyleGAN3-t-paper.yaml
@@ -1,9 +1,10 @@
+# Requires AFHQ dataset folder to be combined into 1 class
 DATA:
-  name: "AFHQ"
+  name: "AFHQ_V2_uncond"
   img_size: 512
   num_classes: 1
 MODEL:
-  backbone: "stylegan2"
+  backbone: "stylegan3"
   g_cond_mtd: "W/O"
   d_cond_mtd: "W/O"
   g_act_fn: "Auto"
@@ -17,20 +18,20 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 0.5
+  r1_lambda: 8.2
   r1_place: "outside_loop"
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
-  batch_size: 64
+  batch_size: 32
   acml_steps: 1
-  g_lr: 0.0025
-  d_lr: 0.0025
+  g_lr: 0.002
+  d_lr: 0.002
   beta1: 0
   beta2: 0.99
   d_first: False
   g_updates_per_step: 1
   d_updates_per_step: 1
-  total_steps: 200000
+  total_steps: 781250
 AUG:
   apply_ada: True
   ada_aug_type: "bgc"
@@ -39,13 +40,14 @@ AUG:
   ada_kimg: 500
   ada_interval: 4
 STYLEGAN:
-  g_reg_interval: 4
+  stylegan3_cfg: "stylegan3-t"
+  g_reg_interval: 1
   d_reg_interval: 16
-  mapping_network: 8
-  style_mixing_p: 0.9
-  g_ema_kimg: 20
+  mapping_network: 2
+  style_mixing_p: 0
+  g_ema_kimg: 10
   g_ema_rampup: "N/A"
-  apply_pl_reg: True
-  pl_weight: 2
+  apply_pl_reg: False
+  pl_weight: 0
   d_architecture: "resnet"
-  d_epilogue_mbstd_group_size: 8
+  d_epilogue_mbstd_group_size: 4
