--- a/src/configs/AFHQ_V2/StyleGAN3-t-paper.yaml
+++ b/src/configs/AFHQ_V2/StyleGAN3-t-paper.yaml
@@ -46,7 +46,7 @@ STYLEGAN:
   mapping_network: 2
   style_mixing_p: 0
   g_ema_kimg: 10
-  g_ema_rampup: "N/A"
+  g_ema_rampup: 0.05
   apply_pl_reg: False
   pl_weight: 0
   d_architecture: "resnet"
