--- a/src/configs/Baby_ImageNet/BigGAN-256.yaml
+++ b/src/configs/Baby_ImageNet/BigGAN-256.yaml
@@ -1,13 +1,11 @@
 DATA:
-  name: "Tiny_ImageNet"
+  name: "Baby_ImageNet"
   img_size: 64
-  num_classes: 200
+  num_classes: 100
 MODEL:
   backbone: "big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "2C"
-  normalize_d_embed: True
-  d_embed_dim: 768
+  d_cond_mtd: "PD"
   apply_g_sn: True
   apply_d_sn: True
   apply_attn: True
@@ -22,10 +20,6 @@ MODEL:
   g_ema_start: 20000
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 1.0
-  temperature: 1.0
-  apply_cr: True
-  cr_lambda: 10.0
 OPTIMIZATION:
   batch_size: 1024
   g_lr: 0.0001
@@ -33,5 +27,3 @@ OPTIMIZATION:
   beta1: 0.0
   beta2: 0.999
   d_updates_per_step: 1
-AUG:
-  cr_aug_type: "cr"
