--- a/src/configs/Baby_ImageNet/ContraGAN-256.yaml
+++ b/src/configs/Baby_ImageNet/ContraGAN-256.yaml
@@ -1,12 +1,11 @@
 DATA:
-  name: "Tiny_ImageNet"
+  name: "Baby_ImageNet"
   img_size: 64
-  num_classes: 200
+  num_classes: 100
 MODEL:
   backbone: "big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "D2DCE"
-  aux_cls_type: "TAC"
+  d_cond_mtd: "2C"
   normalize_d_embed: True
   d_embed_dim: 768
   apply_g_sn: True
@@ -23,11 +22,8 @@ MODEL:
   g_ema_start: 20000
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 0.75
-  tac_gen_lambda: 0.75
-  tac_dis_lambda: 0.75
-  m_p: 1.0
-  temperature: 0.75
+  cond_lambda: 1.0
+  temperature: 1.0
 OPTIMIZATION:
   batch_size: 1024
   g_lr: 0.0001
