--- a/src/configs/Baby_ImageNet/ReACGAN-256.yaml
+++ b/src/configs/Baby_ImageNet/ReACGAN-256.yaml
@@ -1,11 +1,11 @@
 DATA:
-  name: "Tiny_ImageNet"
+  name: "Baby_ImageNet"
   img_size: 64
-  num_classes: 200
+  num_classes: 100
 MODEL:
   backbone: "big_resnet"
   g_cond_mtd: "cBN"
-  d_cond_mtd: "2C"
+  d_cond_mtd: "D2DCE"
   normalize_d_embed: True
   d_embed_dim: 768
   apply_g_sn: True
@@ -31,6 +31,3 @@ OPTIMIZATION:
   beta1: 0.0
   beta2: 0.999
   d_updates_per_step: 1
-AUG:
-  apply_diffaug: True
-  diffaug_type: "diffaug"
