--- a/src/configs/Baby_ImageNet/SAGAN-256.yaml
+++ b/src/configs/Baby_ImageNet/SAGAN-256.yaml
@@ -1,16 +1,17 @@
 DATA:
-  name: "Tiny_ImageNet"
+  name: "Baby_ImageNet"
   img_size: 64
-  num_classes: 200
+  num_classes: 100
 MODEL:
   g_cond_mtd: "cBN"
-  d_cond_mtd: "AC"
-  aux_cls_type: "TAC"
+  d_cond_mtd: "PD"
+  apply_g_sn: True
+  apply_d_sn: True
+  apply_attn: True
+  attn_g_loc: [3]
+  attn_d_loc: [1]
 LOSS:
   adv_loss: "hinge"
-  cond_lambda: 1.0
-  tac_dis_lambda: 1.0
-  tac_gen_lambda: 1.0
 OPTIMIZATION:
   batch_size: 256
   g_lr: 0.0001
