--- a/src/configs/AFHQv2/StyleGAN2-256Res-LeCam.yaml
+++ b/src/configs/AFHQv2/StyleGAN2-256Res-LeCam.yaml
@@ -1,11 +1,11 @@
 DATA:
-  name: "AFHQ_V2_uncond"
-  img_size: 512
-  num_classes: 1
+  name: "AFHQv2"
+  img_size: 256
+  num_classes: 3
 MODEL:
   backbone: "stylegan2"
-  g_cond_mtd: "W/O"
-  d_cond_mtd: "W/O"
+  g_cond_mtd: "cAdaIN"
+  d_cond_mtd: "SPD"
   g_act_fn: "Auto"
   d_act_fn: "Auto"
   z_prior: "gaussian"
@@ -17,35 +17,31 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 5
+  r1_lambda: 1
   r1_place: "outside_loop"
+  lecam_lambda: 3e-7
+  lecam_ema_start_iter: 1000
+  lecam_ema_decay: 0.99
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
-  batch_size: 32
+  batch_size: 64
   acml_steps: 1
-  g_lr: 0.002
-  d_lr: 0.002
+  g_lr: 0.0025
+  d_lr: 0.0025
   beta1: 0
   beta2: 0.99
   d_first: False
   g_updates_per_step: 1
   d_updates_per_step: 1
-  total_steps: 781250
-AUG:
-  apply_ada: True
-  ada_aug_type: "bgc"
-  ada_initial_augment_p: 0
-  ada_target: 0.6
-  ada_kimg: 500
-  ada_interval: 4
+  total_steps: 200000
 STYLEGAN:
   g_reg_interval: 4
   d_reg_interval: 16
   mapping_network: 8
   style_mixing_p: 0.9
-  g_ema_kimg: 10
+  g_ema_kimg: 20
   g_ema_rampup: "N/A"
   apply_pl_reg: True
   pl_weight: 2
   d_architecture: "resnet"
-  d_epilogue_mbstd_group_size: 4
+  d_epilogue_mbstd_group_size: 8
