--- a/src/configs/AFHQv2/StyleGAN2-paper.yaml
+++ b/src/configs/AFHQv2/StyleGAN2-paper.yaml
@@ -1,10 +1,9 @@
-# Requires AFHQ dataset folder to be combined into 1 class
 DATA:
-  name: "AFHQ_V2_uncond"
+  name: "AFHQv2"
   img_size: 512
-  num_classes: 1
+  num_classes: 3
 MODEL:
-  backbone: "stylegan3"
+  backbone: "stylegan2"
   g_cond_mtd: "W/O"
   d_cond_mtd: "W/O"
   g_act_fn: "Auto"
@@ -18,13 +17,13 @@ MODEL:
 LOSS:
   adv_loss: "logistic"
   apply_r1_reg: True
-  r1_lambda: 8.2
+  r1_lambda: 5
   r1_place: "outside_loop"
 OPTIMIZATION:
   # These values will be slightly changed if lazy regularization is applied.
   batch_size: 32
   acml_steps: 1
-  g_lr: 0.0025
+  g_lr: 0.002
   d_lr: 0.002
   beta1: 0
   beta2: 0.99
@@ -40,14 +39,13 @@ AUG:
   ada_kimg: 500
   ada_interval: 4
 STYLEGAN:
-  stylegan3_cfg: "stylegan3-t"
-  g_reg_interval: 1
+  g_reg_interval: 4
   d_reg_interval: 16
-  mapping_network: 2
-  style_mixing_p: 0
+  mapping_network: 8
+  style_mixing_p: 0.9
   g_ema_kimg: 10
-  g_ema_rampup: 0.05
-  apply_pl_reg: False
-  pl_weight: 0
+  g_ema_rampup: "N/A"
+  apply_pl_reg: True
+  pl_weight: 2
   d_architecture: "resnet"
   d_epilogue_mbstd_group_size: 4
