--- a/src/configs/AFHQ_V2/StyleGAN2-paper.yaml
+++ b/src/configs/AFHQ_V2/StyleGAN2-paper.yaml
@@ -44,7 +44,7 @@ STYLEGAN:
   mapping_network: 8
   style_mixing_p: 0.9
   g_ema_kimg: 10
-  g_ema_rampup: "N/A"
+  g_ema_rampup: 0.05
   apply_pl_reg: True
   pl_weight: 2
   d_architecture: "resnet"
