--- a/src/configs/JointGAN/cifar-lsgan.yaml
+++ b/src/configs/JointGAN/cifar-lsgan.yaml
@@ -8,7 +8,7 @@ MODEL:
   g_conv_dim: "N/A"
   d_conv_dim: "N/A"
 LOSS:
-  adv_loss: "vanilla_relativistic"
+  adv_loss: "least_square_relativistic"
   relativistic: True
 OPTIMIZATION:
   d_updates_per_step: 2
