f: implement `Tiny_ImageNet` dataset configs, jointgan version of `resnet`, r: make code expandable.

--- a/src/configs/JointGAN/cifar/joint-dcgan.yaml
+++ b/src/configs/JointGAN/cifar/joint-dcgan.yaml
@@ -1,10 +1,9 @@
-# implement config for jointgan
 DATA:
   name: "CIFAR10"
   img_size: 32
   num_classes: 10
 MODEL:
-  backbone: "jointgan"
+  backbone: "jointgan.deep_conv"
   g_conv_dim: "N/A"
   d_conv_dim: "N/A"
 LOSS:
