--- a/src/configs/JointGAN/cifar/rgan.yaml
+++ b/src/configs/JointGAN/cifar/rgan.yaml
@@ -1,14 +1,13 @@
-# implement config for jointgan
 DATA:
   name: "CIFAR10"
   img_size: 32
   num_classes: 10
 MODEL:
-  backbone: "jointgan"
+  backbone: "jointgan.deep_conv"
   g_conv_dim: "N/A"
   d_conv_dim: "N/A"
 LOSS:
-  adv_loss: "least_square_relativistic"
+  adv_loss: "rgan"
   relativistic: True
 OPTIMIZATION:
   d_updates_per_step: 2
